# bazel_learning

./: MODULE.bazel  README.md  bazel-bazel_learning  bazel-bin  bazel-out  bazel-testlogs
cpp/: BUILD.bazel  main.cpp
cpp/libfoo/: foo.cpp  foo.h
cpp/tests/: BUILD.bazel  test_foo.cpp
hello_from_rule/: BUILD.bazel  say_hello.bzl
