module(
    name="episode_00",
    version="0.0.1",
)
# Declare Bazel rules for C++
bazel_dep(name = "rules_cc", version = "0.0.9")  # required for core C++ support

# Optionally, other rules like rules_foreign_cc if using CMake, autotools, etc.
bazel_dep(name = "rules_foreign_cc", version = "0.10.1")

# For toolchains or advanced dependency management (optional)
bazel_dep(name = "bazel_skylib", version = "1.4.2")

bazel_dep(name = "rules_rust", version = "0.45.1")  # If using Rust

bazel_dep(name = "rules_python", version = "0.20.0")  # If using Python

bazel_dep(name = "rules_java", version = "4.0.0")  # If using Java

bazel_dep(name = "rules_go", version = "0.48.0")  # If using Go

bazel_dep(name = "googletest", version = "1.14.0")  # For Google Test support


