module(
    name="episode_00",
    version="0.0.1",
)
#bazel rule declaration for cpp not required here, as Bazel includes basic C++ build rules like cc_library, cc_binary, cc_test by default, as part of its native rule set.

bazel_dep(name = "rules_rust", version = "0.45.1")  # If using Rust

bazel_dep(name = "rules_python", version = "0.40.0")  # If using Python

bazel_dep(name = "rules_java", version = "8.11.0")  # If using Java

bazel_dep(name = "rules_go", version = "0.48.0")  # If using Go

bazel_dep(name = "googletest", version = "1.14.0")  # For Google Test support


